# nxpydocs

./: NOTICE  README.md  pyproject.toml
src/nxpydocs/: __init__.py  csv.j2  html.j2  md.j2  mindmap.j2  nxpydocs.py  script.py
