[tool.poetry]
name = "nxpydocs"
version = "0.1.62"
description = "Automated Business Ready Documents from the NX-OS Guestshell"
packages = [{ include = "nxpydocs", from = "src"}]
readme = "README.md"
authors = ["John Capobianco <ptcapo@gmail.com>"]

[tool.poetry.scripts]
nxpydocs = 'nxpydocs.script:run'

[tool.poetry.dependencies]
python = "^2.7"
PyYAML = "^5.4"
click = "7.1.2"
Jinja2 = "2.11.3"
pathlib = "^1.0.1"
furl = "^2.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
